Crash if Object names longer than 28 characters when "UseCount" is checked in particle options #35296

Closed
opened 2013-05-10 18:29:15 +02:00 by Niko Kauppi · 3 comments

%%%This bug was originally discovered by my friend here. http://xaotherion.deviantart.com/
I'm not sure how fast this needs fixing but I'd guess this isn't too big of a problem unless it's python based. :)

- Operating System, Graphics card ---

Windows 7
Nvidia GTX 580

- Blender version with error, and version that worked ---

Occurred in 64bit official 2.67 and 2.63
Checked older one too but longer names than 28 characters seems to be somewhat new feature.

- Short description of error ---

Using particle system to distribute objects around the surface and using a group.
Whenever object names are longer than 28 characters and box that appears when you click "Use count", Blender crashes.
You can select another panel or select another object and rename the object to a longer name without a problem but whenever the "Use count" box sees longer names than 28 characters, Blender will crash.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached file, the object named "01..This_Name_Is_28_chars..>" add any mark/character at the end of the name to make it longer. Select the plane object if not already selected, crash happens.
%%%

%%%This bug was originally discovered by my friend here. http://xaotherion.deviantart.com/ I'm not sure how fast this needs fixing but I'd guess this isn't too big of a problem unless it's python based. :) - Operating System, Graphics card --- Windows 7 Nvidia GTX 580 - Blender version with error, and version that worked --- Occurred in 64bit official 2.67 and 2.63 Checked older one too but longer names than 28 characters seems to be somewhat new feature. - Short description of error --- Using particle system to distribute objects around the surface and using a group. Whenever object names are longer than 28 characters and box that appears when you click "Use count", Blender crashes. You can select another panel or select another object and rename the object to a longer name without a problem but whenever the "Use count" box sees longer names than 28 characters, Blender will crash. - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the attached file, the object named "01..This_Name_Is_28_chars..>" add any mark/character at the end of the name to make it longer. Select the plane object if not already selected, crash happens. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn now, thanks for the report.%%%

%%%Fix in svn now, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35296
No description provided.