Fix #35296: particles crash with long object name.